[tool.poetry]
name = "rasam"
version = "0.2.0-alpha.0"
description = "Rasa Improved"
authors = ["Ronie Martinez <ronmarti18@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "rasam" },
]
keywords = [
    "URL extractor for Rasa",
    "Regex entity extractor for Rasa",
    "Placeholder importer for Rasa",
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: Implementation :: CPython",
]

[tool.poetry.dependencies]
python = ">=3.6,<3.8"
rasa = "^1.9.5"
urlextract = "^0.14.0"
faker = "^4.0.3"

[tool.poetry.dev-dependencies]
asynctest = "^0.13.0"
autoflake = "^1.3.1"
black = "^19.10b0"
codecov = "^2.0.22"
dephell = "^0.8.2"
flake8 = "^3.7.9"
isort = "^4.3.21"
mypy = "^0.770"
pytest = "^5.4.1"
pytest-asyncio = "^0.10.0"
pytest-cov = "^2.8.1"

[tool.black]
line-length = 120

[tool.isort]
line_length = 120
multi_line_output = 3
include_trailing_comma = true

[tool.dephell.main]
from = {format = "poetry", path = "pyproject.toml"}
to = {format = "setuppy", path = "setup.py"}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
