[tool.poetry]
name = "rasam"
version = "0.4.0"
description = "Rasa Improved"
repository = "https://github.com/roniemartinez/rasam"
authors = ["Ronie Martinez <ronmarti18@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "rasam" },
]
keywords = [
    "URL extractor for Rasa",
    "Regex entity extractor for Rasa",
    "Placeholder importer for Rasa",
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: Implementation :: CPython",
]

[tool.poetry.dependencies]
python = ">=3.6.2,<3.9"
rasa = "^2.6.1"
urlextract = "^1.2.0"
Faker = "^8.1.4"

[tool.poetry.dev-dependencies]
autoflake = "^1.3.1"
black = "^21.9b0"
codecov = "^2.1.12"
dephell = "^0.8.2"
flake8 = "^3.7.9"
isort = "^5.9.3"
mypy = "^0.910"
pytest = "^6.2.5"
pytest-asyncio = "^0.15.1"
pytest-cov = "^2.12.1"
tomlkit = "0.7.0"  # dephell is broken on versions above 0.7.0

[tool.isort]
line_length = 120
multi_line_output = 3
force_grid_wrap = 0
use_parentheses = true
include_trailing_comma = true
ensure_newline_before_comments = true

[tool.black]
line-length = 120
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
# A regex preceded with ^/ will apply only to files and directories
# in the root of the project.
^/foo.py  # exclude a file named foo.py in the root of the project (in addition to the defaults)
'''

[tool.dephell.main]
from = {format = "poetry", path = "pyproject.toml"}
to = {format = "setuppy", path = "setup.py"}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
