[tool.poetry]
name = "rasam"
version = "0.5.2"
description = "Rasa Improved"
repository = "https://github.com/roniemartinez/rasam"
authors = ["Ronie Martinez <ronmarti18@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "rasam" },
]
keywords = [
    "URL extractor for Rasa",
    "Regex entity extractor for Rasa",
    "Placeholder importer for Rasa",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: Implementation :: CPython",
]

[tool.poetry.urls]
"Donate" = "https://github.com/sponsors/roniemartinez"

[tool.poetry.dependencies]
python = ">=3.7,<3.9"
rasa = "^2.8.12"
urlextract = "^1.2.0"
Faker = ">=8.1.4,<14.0.0"

[tool.poetry.dev-dependencies]
autoflake = "^1.3.1"
black = "22.1.0"
dephell = "^0.8.2"
flake8 = "^4.0.1"
isort = "^5.10.1"
mistune = "<2.0.0"  # not compatible with m2r
mypy = "^0.941"
pyproject-flake8 = "^0.0.1-alpha.2"
pytest = "^7.1.1"
pytest-asyncio = "^0.18.2"
pytest-cov = "^3.0.0"
tomlkit = "0.7.0"  # dephell is broken on versions above 0.7.0

[tool.isort]
line_length = 120
multi_line_output = 3
force_grid_wrap = 0
use_parentheses = true
include_trailing_comma = true
ensure_newline_before_comments = true
atomic = true

[tool.black]
line-length = 120
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = """
# A regex preceded with ^/ will apply only to files and directories
# in the root of the project.
^/setup.py
"""

[tool.mypy]
disallow_untyped_defs = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "pkg_resources",
]
ignore_missing_imports = true

[tool.flake8]
max-line-length = 120
extend-ignore = "E203"
extend-exclude = """
setup.py,
"""

[tool.pytest.ini_options]
addopts = """\
    --cov=rasam \
    --cov-report=term-missing \
    --cov-report=xml \
    --cov-report=html \
    -vv \
    -x \
"""

[tool.dephell.main]
from = { format = "poetry", path = "pyproject.toml" }
to = { format = "setuppy", path = "setup.py" }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
